--- a/src/app/components/event-chat/event-chat.component.html
+++ b/src/app/components/event-chat/event-chat.component.html
@@ -1,4 +1,4 @@
-<div style="width: 390px; height: 600px; position: relative; background: #37474F;">
+<div style="width: 390px; height: 600px; position: relative; background: #37474F; border-radius: 5px;">
     <div style="position: absolute; bottom: 0;">
         <div>
             <div *ngFor="let comment of comments?.results">
