--- a/src/styles/custom-themes/dark-theme.scss
+++ b/src/styles/custom-themes/dark-theme.scss
@@ -76,3 +76,7 @@ $dark-color-config: theming.mat-create-color-config(
 .ymaps-2-1-79-ground-pane {
   filter: grayscale(1);
 }
+
+.cell {
+  background: #37474F;
+}
